Diagnostics: key the set by owner, port IMarkerService's verbs
DiagnosticSet held one flat list, so the last writer won. That is the
same failure Workbench.onStatus had before the status bar was keyed,
arriving a second time in a different package.

VS Code keys markers by (owner, resource) exactly so typescript, eslint
and a linter can each replace only their own findings on one file;
IntelliJ does the same per inspection. Ported the owner half and its
verbs -- changeOne / changeAll / remove / read -- from
vs/platform/markers/common/markerService.ts.

It was already binding. ShaderGraphEditor has FOUR independent producers
(the emitter's problems, the GLSL driver's refusal, the preview's
failure, graph-level warnings) and merged all four into one list by hand
on every compile, because the model could not hold them separately --
any of them writing alone would have erased the other three. They are
now four owners, and the source string each diagnostic already carried
is what names them.

changeAll exists so that write announces once. Four changeOne calls
would rebuild a bound Problems panel four times for one compile, and an
owner left behind because this run had nothing to say about it would
show last compile's errors beside this one's.

The change guard moved to the MERGED list rather than the owner that
wrote, because that is what every consumer reads: an owner swapping two
equal diagnostics changes its own slot and changes nothing visible.

Mutation-checked: pointing changeOne at the default owner fails three of
the five new tests.

Not ported: the resource dimension, and therefore the global service. A
TextEditor deliberately has no resource -- it is reusable and the harness
uses it with no file behind it -- and there is no project-wide problems
view to consume the map. Structure with no consumer is what this pass is
removing elsewhere; the gap is written down on the class instead.

Also in this stack:
- ProblemsPanel.refresh did clear() then add() per row, so 