@@ -6,97 +6,213 @@ import com.crystalgui.text.TextPoint;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 
 import javax.annotation.Nullable;
 
 /**
  * Every {@link Diagnostic} currently known about one document, kept in document order.
  *
- * <h3>Replace-all, not incremental</h3>
+ * <p>The per-document half of VS Code's {@code IMarkerService}, whose verbs — {@link #changeOne},
+ * {@link #changeAll}, {@link #remove}, {@link #read} — this borrows.</p>
  *
- * <p>{@link #setAll} is the primary mutator and {@link #add} exists mainly for building a set up before
- * installing it. That is how the producers actually behave: a compile either succeeds or returns the
- * complete list of what is wrong, and there is no such thing as "one error was fixed" arriving on its own.
- * An incremental API would have to answer which of the previous diagnostics survived, and nothing that
- * feeds this can answer that — the honest model is that each compile supersedes the last one wholesale.</p>
+ * <h3>Keyed by owner, because a document has more than one producer</h3>
+ *
+ * <p>This held a single flat list, which meant the <b>last writer won</b> — and that is the exact failure
+ * {@code Workbench.onStatus} had before the status bar was keyed, arriving a second time in a different
+ * package. VS Code keys markers by {@code (owner, resource)} precisely so {@code typescript},
+ * {@code eslint} and a linter can each replace only their own findings on one file; IntelliJ does the same
+ * per inspection.</p>
+ *
+ * <p>It was already binding here before it was fixed. {@code ShaderGraphEditor} has <b>four</b> independent
+ * producers — the emitter's own problems, the GLSL driver's refusal, the preview's failure, and graph-level
+ * warnings — and merged all four into one list by hand on every compile, because the model could not hold
+ * them separately. Each is now an owner that replaces itself and leaves the others alone, which is also
+ * what lets the driver's verdict persist across a recompile that did not reach the driver.</p>
+ *
+ * <h3>Replace-all per owner, not incremental</h3>
+ *
+ * <p>An owner either succeeds or returns the complete list of what it found; there is no such thing as
+ * "one error was fixed" arriving on its own. An incremental API would have to answer which of the previous
+ * diagnostics survived, and nothing that feeds this can answer that — the honest model is that each run
+ * supersedes that owner's last one wholesale.</p>
  *
  * <p>This is also why the set carries no identity per diagnostic. Two compiles of the same broken file
- * produce equal records, and {@code equals} on the list is what {@link #setAll} uses to stay quiet, so a
- * recompile that changes nothing emits no change and repaints nothing.</p>
+ * produce equal records, and {@code equals} on the list is what keeps an unchanged recompile silent, so it
+ * repaints nothing.</p>
  *
  * <h3>One set per document, and it is not the editor's</h3>
  *
  * <p>The same boundary the undo stack draws. Diagnostics describe the <em>document</em>, so two views onto
- * one file show the same problems, and a document with no view open still has them — which is what a
- * Problems panel listing errors in files you have not opened requires.</p>
+ * one file show the same problems, and a document with no view open still has them.</p>
+ *
+ * <h3>Known gap: there is no resource dimension</h3>
+ *
+ * <p>VS Code's service is keyed by {@code (owner, resource)} and is global, which is what lets its Problems
+ * view list files that are not open. Ours is per-document, so the resource half is implicit. Not added on
+ * speculation: a {@code TextEditor} deliberately has no resource — it is reusable and is used in the
+ * harness with no file behind it at all — and there is no project-wide problems view to consume the map.
+ * Structure with no consumer is what this pass is removing elsewhere, not adding here.</p>
  */
 public final class DiagnosticSet {
+
+    /**
+     * Who a diagnostic is attributed to when nobody said — {@link #setAll} writes here.
+     *
+     * <p>Named rather than left blank so the single-producer case is one owner among others rather than a
+     * special case in every query.</p>
+     */
+    public static final String DEFAULT_OWNER = "default";
 
     /** Fires whenever the contents change. Carries no value: a listener re-reads, so ten mutations in a
      * tick collapse to one repaint, exactly as {@code UITreeObserver.onStateDirty} does. */
     public final Signal.Action onChanged = new Signal.Action();
 
-    private final List<Diagnostic> diagnostics = new ArrayList<>();
+    /** Insertion-ordered, so {@link #owners()} is stable and a merge is reproducible. */
+    private final Map<String, List<Diagnostic>> byOwner = new LinkedHashMap<>();
+
+    /** Every owner's contents, merged and sorted. Rebuilt on mutation, never on read. */
+    private List<Diagnostic> merged = List.of();
 
     public boolean isEmpty() {
-        return diagnostics.isEmpty();
+        return merged.isEmpty();
     }
 
     public int size() {
-        return diagnostics.size();
+        return merged.size();
     }
 
+    /** Everything, in document order, from every owner. */
     public List<Diagnostic> all() {
-        return Collections.unmodifiableList(diagnostics);
+        return Collections.unmodifiableList(merged);
+    }
+
+    /** What one owner last reported. Empty when it has never reported or has been removed. */
+    public List<Diagnostic> read(String owner) {
+        return Collections.unmodifiableList(byOwner.getOrDefault(owner, List.of()));
+    }
+
+    /** Who has reported anything, in the order they first did. */
+    public Set<String> owners() {
+        return Collections.unmodifiableSet(byOwner.keySet());
     }
 
     /**
-     * Replaces the contents, sorted into document order.
+     * Replaces everything {@code owner} has to say, leaving every other owner alone.
      *
-     * <p>No-ops when the new set equals the old one, so a recompile of an unchanged file does not repaint
-     * every squiggle in it — the same equality guard {@code replaceOrPutCandidate} uses to make widget
-     * geometry settle.</p>
+     * <p>No-ops when that owner's contents are unchanged, so a recompile that finds the same problems does
+     * not repaint every squiggle in the file — the same equality guard {@code replaceOrPutCandidate} uses
+     * to make widget geometry settle.</p>
      */
-    public DiagnosticSet setAll(@Nullable Collection<Diagnostic> incoming) {
-        List<Diagnostic> sorted = new ArrayList<>(incoming == null ? List.of() : incoming);
-        sorted.removeIf(java.util.Objects::isNull);
-        Collections.sort(sorted);
-        if (sorted.equals(diagnostics)) return this;
-        diagnostics.clear();
-        diagnostics.addAll(sorted);
-        onChanged.emit();
+    public DiagnosticSet changeOne(String owner, @Nullable Collection<Diagnostic> diagnostics) {
+        String key = owner == null ? DEFAULT_OWNER : owner;
+        List<Diagnostic> incoming = sanitise(diagnostics);
+        List<Diagnostic> previous = byOwner.get(key);
+        if (incoming.isEmpty()) {
+            if (previous == null) return this;
+            byOwner.remove(key);
+        } else {
+            if (incoming.equals(previous)) return this;
+            byOwner.put(key, incoming);
+        }
+        remerge();
         return this;
     }
 
-    public DiagnosticSet add(Diagnostic diagnostic) {
-        if (diagnostic == null) return this;
-        List<Diagnostic> next = new ArrayList<>(diagnostics);
-        next.add(diagnostic);
-        return setAll(next);
+    /**
+     * Replaces <b>every</b> owner's contents in one act, announcing once.
+     *
+     * <p>VS Code's {@code changeAll}, and the reason it exists here is the same: a producer that writes
+     * several owners together — the shader graph writes four on every compile — would otherwise announce
+     * once per owner, and a Problems panel bound to it would rebuild three times for one compile.</p>
+     *
+     * <p>An owner absent from {@code contents} is <em>removed</em>, not left behind. That is what makes
+     * this a replacement rather than a merge, and it is what a producer that owns all of them means.</p>
+     */
+    public DiagnosticSet changeAll(@Nullable Map<String, ? extends Collection<Diagnostic>> contents) {
+        Map<String, List<Diagnostic>> next = new LinkedHashMap<>();
+        if (contents != null) {
+            for (Map.Entry<String, ? extends Collection<Diagnostic>> entry : contents.entrySet()) {
+                List<Diagnostic> sanitised = sanitise(entry.getValue());
+                if (sanitised.isEmpty()) continue;
+                next.put(entry.getKey() == null ? DEFAULT_OWNER : entry.getKey(), sanitised);
+            }
+        }
+        if (next.equals(byOwner)) return this;
+        byOwner.clear();
+        byOwner.putAll(next);
+        remerge();
+        return this;
     }
 
+    /** Drops everything {@code owner} said. Silent when it had said nothing. */
+    public DiagnosticSet remove(String owner) {
+        if (byOwner.remove(owner == null ? DEFAULT_OWNER : owner) == null) return this;
+        remerge();
+        return this;
+    }
+
+    /**
+     * Replaces the {@link #DEFAULT_OWNER}'s contents — the single-producer spelling.
+     *
+     * <p>Kept because most documents have exactly one producer, and making every one of them name an owner
+     * would be ceremony for a distinction they do not have.</p>
+     */
+    public DiagnosticSet setAll(@Nullable Collection<Diagnostic> incoming) {
+        return changeOne(DEFAULT_OWNER, incoming);
+    }
+
+    /** Adds one to the {@link #DEFAULT_OWNER}'s contents. For building a set up before installing it. */
+    public DiagnosticSet add(Diagnostic diagnostic) {
+        if (diagnostic == null) return this;
+        List<Diagnostic> next = new ArrayList<>(byOwner.getOrDefault(DEFAULT_OWNER, List.of()));
+        next.add(diagnostic);
+        return changeOne(DEFAULT_OWNER, next);
+    }
+
+    /** Empties every owner. */
     public DiagnosticSet clear() {
-        return setAll(List.of());
+        if (byOwner.isEmpty()) return this;
+        byOwner.clear();
+        remerge();
+        return this;
+    }
+
+    private static List<Diagnostic> sanitise(@Nullable Collection<Diagnostic> incoming) {
+        if (incoming == null || incoming.isEmpty()) return List.of();
+        List<Diagnostic> copy = new ArrayList<>(incoming);
+        copy.removeIf(Objects::isNull);
+        return copy;
+    }
+
+    /**
+     * Rebuilds the merged view, and announces only if it actually moved.
+     *
+     * <p>The guard is on the <em>merged</em> list rather than on the owner that changed, because that is
+     * what every consumer reads. An owner swapping two equal diagnostics for each other changes its own
+     * slot and changes nothing anybody can see.</p>
+     */
+    private void remerge() {
+        List<Diagnostic> next = new ArrayList<>();
+        for (List<Diagnostic> owned : byOwner.values()) next.addAll(owned);
+        Collections.sort(next);
+        if (next.equals(merged)) return;
+        merged = next;
+        onChanged.emit();
     }
 
     // ── Queries ─────────────────────────────────────────────────────────────────────────────────
-
-    /** Everything covering {@code row}. What a per-line renderer asks once per visible line. */
-    public List<Diagnostic> forRow(int row) {
-        List<Diagnostic> hits = new ArrayList<>();
-        for (Diagnostic diagnostic : diagnostics) {
-            if (diagnostic.touchesRow(row)) hits.add(diagnostic);
-        }
-        return hits;
-    }
 
     /** The worst severity on {@code row}, or null when the row is clean — what decides a squiggle's colour
      * and a gutter icon when several problems overlap. */
     @Nullable
     public DiagnosticSeverity worstOnRow(int row) {
         DiagnosticSeverity worst = null;
-        for (Diagnostic diagnostic : diagnostics) {
+        for (Diagnostic diagnostic : merged) {
             if (diagnostic.touchesRow(row)) worst = DiagnosticSeverity.worst(worst, diagnostic.severity());
         }
         return worst;
@@ -104,7 +220,7 @@ public final class DiagnosticSet {
 
     public int count(DiagnosticSeverity severity) {
         int count = 0;
-        for (Diagnostic diagnostic : diagnostics) {
+        for (Diagnostic diagnostic : merged) {
             if (diagnostic.severity() == severity) count++;
         }
         return count;
@@ -115,7 +231,7 @@ public final class DiagnosticSet {
     @Nullable
     public DiagnosticSeverity worst() {
         DiagnosticSeverity worst = null;
-        for (Diagnostic diagnostic : diagnostics) {
+        for (Diagnostic diagnostic : merged) {
             worst = DiagnosticSeverity.worst(worst, diagnostic.severity());
         }
         return worst;
@@ -132,20 +248,20 @@ public final class DiagnosticSet {
      */
     @Nullable
     public Diagnostic nextFrom(TextPoint from) {
-        if (diagnostics.isEmpty()) return null;
-        for (Diagnostic diagnostic : diagnostics) {
+        if (merged.isEmpty()) return null;
+        for (Diagnostic diagnostic : merged) {
             if (diagnostic.start().compareTo(from) > 0) return diagnostic;
         }
-        return diagnostics.get(0);
+        return merged.get(0);
     }
 
     /** The mirror of {@link #nextFrom}, wrapping to the last. */
     @Nullable
     public Diagnostic previousFrom(TextPoint from) {
-        if (diagnostics.isEmpty()) return null;
-        for (int i = diagnostics.size() - 1; i >= 0; i--) {
-            if (diagnostics.get(i).start().compareTo(from) < 0) return diagnostics.get(i);
+        if (merged.isEmpty()) return null;
+        for (int i = merged.size() - 1; i >= 0; i--) {
+            if (merged.get(i).start().compareTo(from) < 0) return merged.get(i);
         }
-        return diagnostics.get(diagnostics.size() - 1);
+        return merged.get(merged.size() - 1);
     }
 }
